# FinSight

./: .gitignore  Dockerfile  Jenkinsfile  README.md  __init__.py  client.py  debug_easy.py  debug_hard.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json
financial_doc_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  nginx.conf
infra/: delete.sh  start.sh
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
k8s/: deploy_minikube.sh  finsight-minikube.yaml  stop_minikube.sh
server/: Dockerfile  app.py  data_generator.py  environment.py  tasks.py
tests/: test_graders.py
