[project]
name = "financial-doc-env"
version = "1.0.0"
description = "Financial document analysis environment for RL agent training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "python-dotenv",
  "httpx",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.uv]
package = false
